OO-8907: REST API endpoint to trigger QM analysis report